--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -5,7 +5,7 @@ on:
       - main
       - master
 env:
-  LATEX_ROOT: ise-lab-template
+  LATEX_ROOT: ise-lab-strips
 jobs:
   compile:
     runs-on: ubuntu-latest
